scripts/deploy-mongodb/05-mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: ns-mongodb
  labels:
    app: mongo-express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: ns-mongodb
spec:
  selector:
    app: mongo-express
  type: ClusterIP  
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: ns-mongodb
  annotations:
    kubernetes.io/ingress.class: nginx
    # ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/secure-backends: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - c2-mongo-express.flexlab.local
      secretName: mongodb-tls
  rules:
  - host: c2-mongo-express.flexlab.local
    http:
      paths:
      - path: /
        backend:
          serviceName: mongo-express-service
          servicePort: 8081
